fix: $03 - changed z-index in parallax text

--- a/src/app/static/header/header-mobile/header-mobile.component.scss
+++ b/src/app/static/header/header-mobile/header-mobile.component.scss
@@ -28,7 +28,7 @@
     opacity: 0.8;
     transition: all 0.5s ease;
     visibility: visible;
-    z-index: 10;
+    z-index: 4;
 }
 
 @media screen and (min-width: 768px) {
