--- a/src/app/static/header/header.component.scss
+++ b/src/app/static/header/header.component.scss
@@ -30,7 +30,7 @@
         align-items: center;
         width: 100%;
         min-height: 150px;
-        z-index: 5;
+        z-index: 4;
         margin-top: 30px;
 
         &-title {
